--- a/BIgSchool/Content/Site.css
+++ b/BIgSchool/Content/Site.css
@@ -22,3 +22,36 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse {
+    background-color: #290c67;
+    border-color: #959ab4;
+}
+
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: #0feafe;
+    }
+
+    .navbar-inverse .navbar-brand {
+        color: #0feafe;
+    }
+/*Course layout*/
+.course {
+    list-style: none;
+}
+    .course > li {
+        position: relative;
+        margin-bottom: 30px;
+    }
+        .course > li .date {
+            text-align: center;
+            background-color: #290c67;
+            color: #0feafe;
+            width: 60px;
+            border-radius: 8px;
+        }
+        .course > li .details {
+            position: absolute;
+            top: 0;
+            left: 70px;
+        }
